kubernetes/apps/auth/tinyauth/app/referencegrant.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/referencegrant_v1beta1.json
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: httproute-tinyauth
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: games
  to:
    - group: ""
      kind: Service
      name: tinyauth
